# Agent_Arena

./: .env.example  .gitignore  README.md  ipset.sh  memory_structure.md  prompt_testing.md  pyproject.toml  structure.md  structure_frontend.md  test.py  test_cursor.py  test_gemini.py
.claude/: settings.local.json
Structure/: Structure_Qwen.md  Structure_claude.md  Structure_cursor.md  Structure_seed.md  Structure_tencent.md
agents/: architect.yaml  compliance.yaml  developer.yaml  supervisor.yaml  tester.yaml
data/logs/: session_b1638e96-0071-4d7a-a4c6-954ad795b7d0.jsonl
docs/: AUTH_FLOW.md  AUTH_MODULE.md  CONFIG_AGENT_CLI.md  LLM_API_PRICING.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
memory/: AGENT_MEMORY_GUIDE.md  CONTEXT_COMPRESSION.md  MEMORY_SPEC.md  PROMPTS.md  README.md  openclaw_memory_execution_flow.md  raw_openclaw_memory_implementation.md
memory/examples/: agent_memory_example.md  group_chat_compression_example.md
src/: main.py
src/api/: routes_agent.py  routes_group.py  routes_message.py  websocket.py
src/auth/: __init__.py  models.py  routes.py  service.py  storage.py
src/core/: call_logger.py  context_builder.py  orchestrator.py  session_manager.py
src/memory/: personal.py  session_summary.py  store.py  summarizer.py
src/models/: __init__.py  agent.py  protocol.py  session.py
src/registry/: agent_registry.py
tests/: test_adapters.py  test_orchestrator.py  test_registry.py  test_session_manager.py  test_workspace.py
(+27 files in other folders)
